--- a/src/app/dialogs/addbom/addbom.component.html
+++ b/src/app/dialogs/addbom/addbom.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>ເພີມສູດອາຫານ</h1>
-<mat-divider class="mb-4"></mat-divider>
+<mat-divider class="mb-3"></mat-divider>
 <form [formGroup]="addBomForm">
   <div class="row">
     <div class="form-group col-md-4">
@@ -7,14 +7,25 @@
       <input type="text" id="bomName" class="form-control" style="width: 100%;" formControlName="bomName" required>
     </div>
     <div class="form-group col-md-4">
+      <label for="bomName">ຊື່ອາຫານ</label>
+      <select class="form-control" id="foodId" formControlName="foodId" required>
+        <option value="-1" disabled>---------</option>
+        <option value="{{food.id}}" *ngFor="let food of foods">{{ food.id }}. {{ food.food_name }}</option>
+      </select>
+    </div>
+    <div class="form-group col-md-4">
       <label for="note">ຄຳອະທິບາຍ</label>
       <input type="text" id="note" class="form-control" style="width: 100%;" formControlName="note" required>
     </div>
-    <div class="form-group col-md-4">
-      <div class="text-center">
-        <button mat-raised-button color="primary" style="width: 100px;top:32px;" (click)="createBom()">ບັນທຶກ</button>
+  </div>
+  <mat-divider class="mt-3 mb-3"></mat-divider>
+  <div class="row">
+    <div class="form-group col-md-12">
+      <div class="text-right">
+        <button mat-raised-button color="primary" style="width: 100px;" (click)="createBom()">ບັນທຶກ</button>
+        <button mat-raised-button color="warn" style="width: 100px;" class="ml-1"
+          (click)="closeDialog()">ຍົກເລິກ</button>
       </div>
     </div>
   </div>
 </form>
-<mat-divider class="mt-4"></mat-divider>
