--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -44,8 +44,8 @@
                   </ng-template>
                 </div>
                 <img src="{{ food.food_photo }}" alt="{{ food.food_name }}" class="img-thumbnail">
-                <div class="title ">
-                  <div class="align-bottom">
+                <div class="title align-middle">
+                  <div class="align-middle">
                     <span class="font-weight-light lead ">{{ food.food_name }}</span>
                   </div>
                 </div>
