--- a/src/app/pages/foods/foods.component.html
+++ b/src/app/pages/foods/foods.component.html
@@ -138,11 +138,13 @@
           </td>
           <td class="text-center align-middle" *ngIf="parentFood.pFood.enabled; unEnabled">
             <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png"
-              style="max-width: 20px;cursor: pointer;">
+              style="max-width: 20px;cursor: pointer;"
+              (click)="toggleEnaledFood(parentFood.pFood.id,parentFood.pFood.enabled)">
           </td>
           <ng-template #unEnabled>
             <td class="text-center align-middle">
-              <img mat-raised-button src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;">
+              <img mat-raised-button src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
+                (click)="toggleEnaledFood(parentFood.pFood.id,parentFood.pFood.enabled)">
             </td>
           </ng-template>
           <td class="text-center align-middle">
